@@ -1,5 +1,6 @@
 from ucommon 4.3.1 to 4.3.2
 - cmake unit tests added and automated.
+- extensions to mapping, copy and mapped_view get.
 
 from ucommon 4.3.0 to 4.3.1
 - fix for access to keyfile::create().
